--- a/test/fixtures/viewings.yml
+++ b/test/fixtures/viewings.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  user: one
   movie: one
   watched_on: 2025-12-21
 
 two:
+  user: one
   movie: two
   watched_on: 2025-12-21
