--- a/test/fixtures/watchlist_items.yml
+++ b/test/fixtures/watchlist_items.yml
@@ -1,9 +1,11 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
+  user: one
   movie: one
   pitch: MyText
 
 two:
+  user: one
   movie: two
   pitch: MyText
